--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,24 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Ravix" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+<resources>
+    <style name="AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Black background -->
+        <item name="android:windowBackground">@android:color/black</item>
+        <item name="backgroundColor">@android:color/black</item>
+
+        <!-- Disable ripple/highlight effects -->
+        <item name="colorButtonNormal">@android:color/transparent</item>
+        <item name="android:windowElevation">0dp</item>
+
+        <!-- Optional: force text appearance for speed -->
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:fontFamily">monospace</item>
+
+        <!-- set status bar color black -->
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="android:navigationBarColor">@android:color/black</item>
+
+        <!-- Remove animations/transitions if needed -->
+        <item name="android:windowAnimationStyle">@null</item>
+        <item name="android:windowContentTransitions">false</item>
+        <item name="android:windowEnterAnimation">@null</item>
     </style>
 </resources>
